# feature-engineering

./: index.html  pyproject.toml
data/processed/: building_underground_water_processed.csv  feature_engineering.csv  feature_engineering_final.csv  sinkhole_map.html  지반침하_고위험지역_주소.csv
data/raw_data/: sinkhole_reports_200501_250527.xlsx
data/temp/: 도로굴착_주소.csv  지반침하_주소_위경도.csv
docs/: feature.md  gpt2.md  gpt_advice.md
notebooks/: feature.ipynb  feature_check.ipynb
